# carbon-fr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOUVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  ruleset-main-phaseA.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-sdk.yml  release.yml
bruno/: README.md  bruno.json  cost-reference.bru  eligibility-rulesets.bru  error-cost-reference-source.bru  error-date-missing-from.bru  error-eligibility-framework-invalid.bru  error-factors-rte-direct.bru  error-region-invalid.bru  error-region-no-rte-direct.bru  error-version-invalid.bru  exchanges-date.bru  exchanges.bru  factors-acv-ademe.bru  forecast-consumption.bru  forecast.bru  greenest-window-eligibility-low-carbon.bru  greenest-window-eligibility-rfnbo.bru  greenest-window.bru  health-ready.bru  health.bru  intensity-below.bru  intensity-date-consumption.bru  intensity-date.bru  intensity-now-consumption.bru  intensity-now-national-acv.bru  intensity-now-national.bru  intensity-now-regional.bru  intensity-stats-daily.bru  intensity-stats.bru  methodologies.bru  mix-national.bru  mix-regional.bru  openapi.bru  price-date.bru  price.bru  renewable.bru  schedule-slots.bru  schedule.bru  visit-record.bru  (+6 more)
crates/adapter-entsoe/: Cargo.toml
crates/adapter-entsoe/src/: codes.rs  dto.rs  lib.rs
crates/adapter-entsoe/tests/: live.rs
crates/adapter-entsoe/tests/fixtures/: generation_a75.xml  physical_flows_a11.xml
crates/adapter-forecast/: Cargo.toml
crates/adapter-forecast/src/: lib.rs
crates/adapter-gbdt/: Cargo.toml
crates/adapter-gbdt/src/: features.rs  lib.rs
crates/adapter-http/: Cargo.toml
crates/adapter-http/src/: auth.rs  carbonfr_openapi.rs  dto.rs  eligibility_uc.rs  error.rs  handlers.rs  lib.rs
crates/adapter-http/tests/: api.rs  openapi.snapshot.json
crates/adapter-meteo/: Cargo.toml
crates/adapter-meteo/src/: dto.rs  lib.rs
crates/adapter-meteo/tests/: live.rs
crates/adapter-odre/: Cargo.toml
crates/adapter-odre/src/: dto.rs  lib.rs
crates/adapter-odre/tests/: live.rs
crates/adapter-postgres/: Cargo.toml
crates/adapter-postgres/migrations/: 0001_measurement.sql  0002_rollups.sql  0003_mix_thermique.sql  0004_visit.sql  0005_consumption.sql  0006_weather_forecast.sql  0007_cross_border_flow.sql  0008_api_key.sql  0009_webhook_subscription.sql  0010_rollups_incremental.sql  0011_spot_price.sql
crates/adapter-postgres/src/: lib.rs  mapping.rs
crates/adapter-postgres/tests/: pg.rs
crates/adapter-webhook/: Cargo.toml
crates/adapter-webhook/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  ports.rs
crates/core/src/application/: analyze_renewable_signal.rs  backfill.rs  backtest.rs  backtest_renewable.rs  cross_border.rs  find_greenest_window.rs  get_consumption.rs  get_current.rs  get_history.rs  get_price.rs  get_stats.rs  ingest_latest.rs  mod.rs  renewable.rs  schedule.rs  weather.rs
crates/core/src/domain/: calculator.rs  cost.rs  cross_border.rs  factors.rs  forecast.rs  forecast_acv.rs  forecast_point.rs  horizon_bands.rs  intensity.rs  load.rs  measurement.rs  methodology.rs  metrics.rs  mod.rs  price.rs  region.rs  renewable.rs  schedule.rs  stats.rs  time_range.rs  update.rs  visit.rs  weather.rs  webhook.rs  window.rs
crates/core/tests/: use_cases.rs
crates/eligibility/: Cargo.toml
crates/eligibility/src/: evaluate.rs  lib.rs  ruleset.rs  share.rs  verdict.rs
deploy/: Caddyfile  README.md  carbonfr.service
docs/: ARCHITECTURE.md  brief-claude-code-couche-A-electrolyseur.md  brief-claude-code-ruleset-main.md  plan-couche-A-electrolyseur.md
docs/adr/: 0001-langage-rust.md  0002-architecture-hexagonale-et-workspace.md  0003-perimetre-donnees-et-source-odre.md  0004-stockage-postgresql-natif.md  0005-methodologie-carbone.md  0006-cycle-de-vie-revision-donnees.md  0007-topologie-deploiement.md  0008-methodologie-acv-ademe-et-regional.md  0009-modele-prevision-climatologie.md  0010-methodologie-acv-ademe-consumption.md  0011-contrat-prevision-forecastpoint.md  0012-modele-prevision-ml-gbdt.md  0013-prevision-acv-ademe.md  0014-usage-scheduling-streaming.md  0015-tier-heberge-cles-api.md  0016-webhooks.md  0017-endpoint-echanges-transfrontaliers.md  0018-derivation-renouvelable.md  0019-politique-de-versionnement.md  0020-politique-de-depreciation.md  0021-format-erreur-rfc9457.md  0022-observabilite-metrics.md  0023-affichage-prix-electricite.md  0024-couche-comparative-lcoe.md  0024-revue-neutralite.md  0025-extension-hydrogene-carbon-aware.md  0026-methodologie-overlays-eligibilite.md  0027-politique-contribution-verrouillage-branche.md  README.md
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
