[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/adapter-odre",
    "crates/adapter-postgres",
    "crates/adapter-http",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kovelt/carbon-fr"

[workspace.dependencies]
# Crates internes
carbonfr-core = { path = "crates/core" }

# Dépendances tierces (versions centralisées)
axum = "0.8.7"
async-trait = "0.1.89"
thiserror = "2.0.18"
time = "0.3.49"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "time",
    "migrate",
    "macros",
] }
