[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/eligibility",
    "crates/adapter-odre",
    "crates/adapter-postgres",
    "crates/adapter-http",
    "crates/adapter-forecast",
    "crates/adapter-meteo",
    "crates/adapter-entsoe",
    "crates/adapter-webhook",
    "crates/adapter-gbdt",
    "bin/server",
]

# Build de production : binaire optimisé et allégé (déploiement VPS, ADR-0007).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[workspace.package]
# Version applicative unique du workspace (ADR-0019). Toutes les crates en
# héritent (`version.workspace = true`) ; un tag git `vX.Y.Z` doit la refléter
# et déclenche la publication de l'image Docker taguée (release.yml).
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kovelt/carbon-fr"

[workspace.dependencies]
# Crates internes
carbonfr-core = { path = "crates/core" }
carbonfr-eligibility = { path = "crates/eligibility" }
carbonfr-adapter-odre = { path = "crates/adapter-odre" }
carbonfr-adapter-postgres = { path = "crates/adapter-postgres" }
carbonfr-adapter-http = { path = "crates/adapter-http" }
carbonfr-adapter-meteo = { path = "crates/adapter-meteo" }
carbonfr-adapter-entsoe = { path = "crates/adapter-entsoe" }
carbonfr-adapter-webhook = { path = "crates/adapter-webhook" }
carbonfr-adapter-gbdt = { path = "crates/adapter-gbdt" }
carbonfr-adapter-forecast = { path = "crates/adapter-forecast" }

# Dépendances tierces (versions centralisées)
axum = "0.8.7"
gbdt = "0.1"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
sha2 = "0.10.9"
async-trait = "0.1.89"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
thiserror = "2.0.18"
time = "0.3.49"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
quick-xml = { version = "0.41.0", features = ["serialize"] }
# Analyse d'URL WHATWG (identique à celle de reqwest) — calcul pur, pas d'IO :
# utilisé par la validation anti-SSRF des webhooks pour voir exactement l'hôte
# que le client contactera (ADR-0016).
url = "2.5"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "time",
    "migrate",
    "macros",
] }
