[package]
name = "carbonfr-adapter-gbdt"
version.workspace = true
description = "Modèle de prévision ML carbon-fr : GBDT pur Rust (entraînement + inférence), ADR-0012."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
carbonfr-core = { workspace = true }
async-trait = { workspace = true }
gbdt = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
