[package]
name = "carbonfr-adapter-http"
version = "0.0.0"
description = "Adapter entrant carbon-fr : API HTTP (axum) exposant les cas d'usage sous /v1."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
carbonfr-core = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
