[package]
name = "carbonfr-adapter-http"
version.workspace = true
description = "Adapter entrant carbon-fr : API HTTP (axum) exposant les cas d'usage sous /v1."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
carbonfr-core = { workspace = true }
carbonfr-eligibility = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
utoipa = { workspace = true }
sha2 = { workspace = true }
# Code de PRODUCTION (trait EligibilityRepo objet-safe + blanket impl, ADR-0026) :
# async-trait sort des dev-dependencies.
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
carbonfr-adapter-forecast = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
