[package]
name = "carbonfr-adapter-postgres"
version = "0.0.0"
description = "Adapter sortant carbon-fr : implémente IntensityRepository sur PostgreSQL natif (sqlx)."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
carbonfr-core = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
