[package]
name = "carbonfr-core"
version = "0.0.0"
description = "Cœur métier de carbon-fr : domaine, cas d'usage et ports (architecture hexagonale, sans IO)."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
